optimsed js rendering of emulator

--- a/chip-8-emulator/output.css
+++ b/chip-8-emulator/output.css
@@ -780,6 +780,10 @@ video {
   font-weight: 600;
 }
 
+.lowercase {
+  text-transform: lowercase;
+}
+
 .text-gray-900 {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity, 1));
